@@ -1,6 +1,6 @@
 ﻿## Interface: 60200
 ## Author: Benik
-## Version: 2.10
+## Version: 2.11
 ## Title: |cff1784d1ElvUI|r Location Plus
 ## Notes: a plugin for ElvUI 8+, that adds location, coords, 2 Datatexts and a tooltip full of info.
 ## RequiredDeps: ElvUI
