@@ -29,7 +29,7 @@ local right_dtp = CreateFrame('Frame', 'RightCoordDtPanel', E.UIParent)
 local COORDS_WIDTH = 30 -- Coord panels width
 local classColor = RAID_CLASS_COLORS[E.myclass] -- for text coloring
 
-local format = string.format
+local format, tonumber = string.format, tonumber
 
 -----------------
 -- Currency Table
@@ -65,6 +65,7 @@ local currency = {
 	828,	-- Ogre Archaeology Fragment
 	829,	-- Arakkoa Archaeology Fragment
 	1166, 	-- Timewarped Badge (6.22)
+	1191,	-- Valor Points (6.23)
 }
 ------------------------
 -- end of Currency Table
