@@ -102,7 +102,7 @@ function LPB:AddOptions()
 						type = "range",
 						min = 0.05, max = 1, step = 0.05,
 						get = function(info) return E.db.locplus[ info[#info] ] end,
-						set = function(info, value) E.db.locplus[ info[#info] ] = value; LPB:TimerUpdate(); E:StaticPopup_Show("PRIVATE_RL"); end,					
+						set = function(info, value) E.db.locplus[ info[#info] ] = value; E:StaticPopup_Show("PRIVATE_RL"); end,					
 					},
 					LoginMsg = {
 							order = 3,
