@@ -1,3 +1,6 @@
+[b]2.11[/b]
+*Added the new Valor Token
+
 [b]2.10[/b]
 *Added Login Message option (Credit Merathilis)
 *Update deDE locales (Credit Merathilis)
